Publish all crates to Artifactory, regardless of changes (#337)
* Publish all crates to Artifactory, regardless of changes

* Ignore cargo publish errors

--- a/.github/workflows/publish_to_artifactory.yml
+++ b/.github/workflows/publish_to_artifactory.yml
@@ -44,4 +44,4 @@ jobs:
           echo -e "[registries.artifactory]\ntoken = \"Bearer ${{ secrets.ARTIFACTORY_ACCESS_TOKEN }}\"" > ~/.cargo/credentials.toml
 
       - name: Publish changed crates
-        run: scripts/publish_crates.sh --registry=artifactory
+        run: scripts/publish_crates.sh --registry=artifactory --all
