Clean up Cargo for publishing to crates-io (#1)
* Clean up Cargo for publishing to crates-io

- Fix the link to the repository
- Remove the wildcard dependency to fiberplane-models
- Change version of base64uuid to 1.0.0
  It's not versionned with the rest of the workspace.

--- a/base64uuid/Cargo.toml
+++ b/base64uuid/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "base64uuid"
 description = "Type for representing base64url-encoded UUIDs"
-version = "1.0.0-alpha.2"
+version = "1.0.0"
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
