Add descriptions and licenses to generated packages (#2)
* Add descriptions and licenses to generated packages
* Fix mentions of old repo name

--- a/fiberplane-api-client/Cargo.toml
+++ b/fiberplane-api-client/Cargo.toml
@@ -31,6 +31,7 @@ version = "0.3"
 crate-type = ["rlib"]
 edition = "2021"
 name = "fiberplane_api_client"
+description = "Generated API client for Fiberplane API"
 path = "src/lib.rs"
 required-features = []
 
