--- a/fiberplane-provider-protocol/Cargo.toml
+++ b/fiberplane-provider-protocol/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "fiberplane-provider-protocol"
+description = "Fiberplane provider protocol for WASM integration"
 version = "2.0.0-alpha.1"
 authors = { workspace = true }
 edition = { workspace = true }
 rust-version = { workspace = true }
+license = { workspace = true }
 
 [dependencies]
 bytes = { workspace = true }
