--- a/fiberplane-provider-protocol/fiberplane-provider-bindings/Cargo.toml
+++ b/fiberplane-provider-protocol/fiberplane-provider-bindings/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "fiberplane-provider-bindings"
+description = "Fiberplane Provider protocol bindings"
 version = "2.0.0-alpha.1"
 authors = ["Fiberplane <info@fiberplane.com>"]
 edition = "2018"
+license = { workspace = true }
 
 [dependencies]
 bytes = { version = "1", features = ["serde"] }
