--- a/base64uuid/Cargo.toml
+++ b/base64uuid/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "base64uuid"
 description = "Type for representing base64url-encoded UUIDs"
+readme = "README.md"
 version = "1.0.0"
 authors = { workspace = true }
 edition = { workspace = true }
