--- a/fiberplane-markdown/Cargo.toml
+++ b/fiberplane-markdown/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "fiberplane-markdown"
 description = "Utilities to convert Fiberplane Notebooks to and from Markdown"
+readme = "README.md"
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
