--- a/fiberplane-models/Cargo.toml
+++ b/fiberplane-models/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "fiberplane-models"
 description = "Core models used across Fiberplane"
+readme = "README.md"
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
