--- a/fiberplane-provider-protocol/fiberplane-provider-runtime/Cargo.toml
+++ b/fiberplane-provider-protocol/fiberplane-provider-runtime/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "fiberplane-provider-runtime"
 description = "Wasmer runtime for Fiberplane Providers"
+readme = "README.md"
 version = "2.0.0-alpha.1"
 authors = { workspace = true }
 edition = { workspace = true }
