--- a/fiberplane-templates/Cargo.toml
+++ b/fiberplane-templates/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "fiberplane-templates"
 description = "Programmatically generate Fiberplane Notebooks for repeatable workflows"
+readme = "README.md"
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
