--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "fiberplane"
 description = "All the Fiberplane crates in one place"
+readme = "README.md"
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
