--- a/fiberplane-provider-protocol/fiberplane-provider-bindings/Cargo.toml
+++ b/fiberplane-provider-protocol/fiberplane-provider-bindings/Cargo.toml
@@ -2,7 +2,7 @@
 name = "fiberplane-provider-bindings"
 description = "Fiberplane Provider protocol bindings"
 readme = "README.md"
-version = "2.0.0-alpha.1"
+version = "2.0.0-beta.1"
 authors = ["Fiberplane <info@fiberplane.com>"]
 edition = "2018"
 license = { workspace = true }
@@ -10,10 +10,7 @@ license = { workspace = true }
 [dependencies]
 bytes = { version = "1", features = ["serde"] }
 fiberplane-models = { workspace = true }
-fp-bindgen-support = { version = "3.0.0-alpha.1", features = [
-    "async",
-    "guest",
-] }
+fp-bindgen-support = { workspace = true, features = ["async", "guest"] }
 once_cell = { workspace = true }
 rmp-serde = { version = "1.0" }
 rmpv = { version = "1.0.0", features = ["with-serde"] }
