--- a/fiberplane-provider-protocol/Cargo.toml
+++ b/fiberplane-provider-protocol/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fiberplane-provider-protocol"
 description = "Fiberplane provider protocol for WASM integration"
-version = "2.0.0-alpha.1"
+version = "2.0.0-beta.1"
 authors = { workspace = true }
 edition = { workspace = true }
 rust-version = { workspace = true }
