--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,3 +6,6 @@ index = "https://fiberplane.jfrog.io/artifactory/git/internal-cargo-local.git"
 
 [net]
 git-fetch-with-cli = true
+
+[alias]
+xtask = "run --package xtask --"
