--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,14 @@ members = [
     "base64uuid",
     "fiberplane",
     "fiberplane-api-client",
+    "fiberplane-ci",
     "fiberplane-markdown",
     "fiberplane-models",
     "fiberplane-provider-protocol",
     "fiberplane-provider-protocol/fiberplane-provider-bindings",
     "fiberplane-provider-protocol/fiberplane-provider-runtime",
     "fiberplane-templates",
+    "xtask",
 ]
 
 [workspace.package]
@@ -26,6 +28,7 @@ fp-bindgen = { version = "3.0.0-beta.1" }
 fp-bindgen-support = { version = "3.0.0-beta.1" }
 fiberplane = { version = "1.0.0-beta.1", path = "fiberplane" }
 fiberplane-api-client = { version = "1.0.0-beta.1", path = "fiberplane-api-client" }
+fiberplane-ci = { version = "0.1.0", path = "fiberplane-ci" }
 fiberplane-markdown = { version = "1.0.0-beta.1", path = "fiberplane-markdown" }
 fiberplane-models = { version = "1.0.0-beta.1", path = "fiberplane-models" }
 fiberplane-provider-bindings = { version = "2.0.0-beta.1", path = "fiberplane-provider-protocol/fiberplane-provider-bindings" }
