--- a/fiberplane-provider-protocol/fiberplane-provider-runtime/Cargo.toml
+++ b/fiberplane-provider-protocol/fiberplane-provider-runtime/Cargo.toml
@@ -2,7 +2,7 @@
 name = "fiberplane-provider-runtime"
 description = "Wasmer runtime for Fiberplane Providers"
 readme = "README.md"
-version = "2.0.0-beta.1"
+version = "2.0.0-beta.2"
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
@@ -22,7 +22,7 @@ rmpv = { version = "1.0.0", features = ["with-serde"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
-tokio = "1.9.0"
+tokio = { workspace = true }
 tracing = { workspace = true }
 wasmer = { version = "2.3", default-features = false, features = [
     "compiler",
