--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -10,5 +10,7 @@ publish = false
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 console = "0.15"
+duct = "0.13"
 fiberplane-ci = { workspace = true }
 thiserror = "1"
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
