--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ members = [
 ]
 
 [workspace.package]
-version = "1.0.0-beta.1"
+version = "1.0.0-beta.2"
 authors = ["Fiberplane <info@fiberplane.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -26,15 +26,15 @@ base64uuid = { version = "1.0.0", path = "base64uuid", default-features = false 
 bytes = { version = "1", features = ["serde"] }
 fp-bindgen = { version = "3.0.0-beta.1" }
 fp-bindgen-support = { version = "3.0.0-beta.1" }
-fiberplane = { version = "1.0.0-beta.1", path = "fiberplane" }
-fiberplane-api-client = { version = "1.0.0-beta.1", path = "fiberplane-api-client" }
+fiberplane = { version = "1.0.0-beta.2", path = "fiberplane" }
+fiberplane-api-client = { version = "1.0.0-beta.2", path = "fiberplane-api-client" }
 fiberplane-ci = { version = "0.1.0", path = "fiberplane-ci" }
-fiberplane-markdown = { version = "1.0.0-beta.1", path = "fiberplane-markdown" }
-fiberplane-models = { version = "1.0.0-beta.1", path = "fiberplane-models" }
-fiberplane-provider-bindings = { version = "2.0.0-beta.1", path = "fiberplane-provider-protocol/fiberplane-provider-bindings" }
-fiberplane-provider-runtime = { version = "2.0.0-beta.1", path = "fiberplane-provider-protocol/fiberplane-provider-runtime" }
-fiberplane-templates = { version = "1.0.0-beta.1", path = "fiberplane-templates" }
-once_cell = { version = "1.8" }
+fiberplane-markdown = { version = "1.0.0-beta.2", path = "fiberplane-markdown" }
+fiberplane-models = { version = "1.0.0-beta.2", path = "fiberplane-models" }
+fiberplane-provider-bindings = { version = "2.0.0-beta.2", path = "fiberplane-provider-protocol/fiberplane-provider-bindings" }
+fiberplane-provider-runtime = { version = "2.0.0-beta.2", path = "fiberplane-provider-protocol/fiberplane-provider-runtime" }
+fiberplane-templates = { version = "1.0.0-beta.2", path = "fiberplane-templates" }
+once_cell = { version = "1.12" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1.0.37"
@@ -43,6 +43,7 @@ time = { version = "0.3.15", features = [
     "serde-human-readable",
     "serde-well-known",
 ] }
+tokio = "1"
 tracing = "0.1.37"
 typed-builder = "0.12"
 url = { version = "2.2.2", features = ["serde"] }
