--- a/fiberplane-provider-protocol/Cargo.toml
+++ b/fiberplane-provider-protocol/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "fiberplane-provider-protocol"
 description = "Fiberplane provider protocol for WASM integration"
-version = "2.0.0-beta.1"
+version = "2.0.0-beta.2"
 authors = { workspace = true }
 edition = { workspace = true }
 rust-version = { workspace = true }
 license = { workspace = true }
+publish = false
 
 [dependencies]
 bytes = { workspace = true }
