--- a/.github/workflows/manual_publish.yml
+++ b/.github/workflows/manual_publish.yml
@@ -1,14 +1,7 @@
 name: Manual publish
 
 on:
-  workflow_dispatch:
-    inputs:
-      target:
-        description: "What do we want to publish?"
-        required: true
-        options:
-        - alphas
-        - betas
+  workflow_dispatch: {}
 
 env:
   CARGO_TERM_COLOR: always
@@ -19,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 2
+          fetch-depth: 0
 
       - name: setup-git-credentials
         uses: de-vri-es/setup-git-credentials@v2
@@ -50,4 +43,4 @@ jobs:
           args: ${{ secrets.CRATES_TOKEN }}
 
       - name: Publish crates
-        run: cargo xtask publish ${{ inputs.target }}
+        run: cargo xtask publish
