--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 2
+          fetch-depth: 0
 
       - name: setup-git-credentials
         uses: de-vri-es/setup-git-credentials@v2
@@ -63,16 +63,12 @@ jobs:
         run: cargo test --verbose
 
       - name: Cargo login
-        if: ${{ github.event_name != 'push' || github.ref == 'refs/heads/main' }}
+        if: ${{ github.event_name == 'release' }}
         uses: actions-rs/cargo@v1
         with:
           command: login
           args: ${{ secrets.CRATES_TOKEN }}
 
-      - name: Publish alpha crates
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        run: cargo xtask publish alphas
-
-      - name: Publish beta crates
-        if: ${{ github.event_name == 'release' && contains(github.event.release.tag_name, '-beta.') }}
-        run: cargo xtask publish betas
+      - name: Publish crates
+        if: ${{ github.event_name == 'release' }}
+        run: cargo xtask publish
