--- a/.github/workflows/check_openapi.yml
+++ b/.github/workflows/check_openapi.yml
@@ -11,11 +11,28 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Cache Rust dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: ${{ runner.os }}-cargo-
+
+    - name: Install latest stable
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+        components: rustfmt, clippy
+
     - name: Verify generated API client
       run: |
-        ./scripts/generate_api_client.sh
+        cargo xtask generate-api-client
         if ! git diff --quiet ; then
-          echo "::error file=schemas/openapi_v1.yml::The OpenAPI client is out of date. Please run scripts/generate_api_client.sh and commit the results";
+          echo "::error file=schemas/openapi_v1.yml::The OpenAPI client is out of date. Please run cargo xtask generate-api-client and commit the results";
           git diff;
           exit 1;
         fi
