--- a/.github/workflows/test_typescript.yml
+++ b/.github/workflows/test_typescript.yml
@@ -3,6 +3,7 @@ name: Test TypeScript packages
 on:
   push:
     paths:
+      - ".github/workflows/*_typescript.yml"
       - "fiberplane-charts"
       - "package.json"
       - "rome.json"
@@ -15,6 +16,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Install dependencies
+        run: yarn --immutable
 
       - name: Linting and formatting
         # Skip on main, since it's not critical and should've already been
