--- a/fiberplane-provider-protocol/fiberplane-provider-bindings/Cargo.toml
+++ b/fiberplane-provider-protocol/fiberplane-provider-bindings/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "fiberplane-provider-bindings"
+version = "2.0.0-beta.2"
+authors = { workspace = true }
+edition = "2018"
 description = "Fiberplane Provider protocol bindings"
 readme = "README.md"
-version = "2.0.0-beta.2"
-authors = ["Fiberplane <info@fiberplane.com>"]
-edition = "2018"
 license = { workspace = true }
 
 [dependencies]
