--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -6,7 +6,7 @@ on:
     paths-ignore:
       - "fiberplane-charts"
   release:
-    type: [published]
+    types: [published]
 
 env:
   CARGO_TERM_COLOR: always
