--- a/.github/workflows/test_typescript.yml
+++ b/.github/workflows/test_typescript.yml
@@ -2,9 +2,10 @@ name: Test TypeScript packages
 
 on:
   push:
+    branches: ["**"]
     paths:
       - ".github/workflows/*_typescript.yml"
-      - "fiberplane-charts"
+      - "fiberplane-charts/**"
       - "package.json"
       - "rome.json"
       - "yarn.lock"
