--- a/.github/workflows/test_typescript.yml
+++ b/.github/workflows/test_typescript.yml
@@ -5,7 +5,8 @@ on:
     branches: ["**"]
     paths:
       - ".github/workflows/*_typescript.yml"
-      - "fiberplane-charts/**"
+      - "fiberplane-charts/**.ts"
+      - "fiberplane-charts/**.tsx"
       - "package.json"
       - "rome.json"
       - "yarn.lock"
