Add `fiberplane-prometheus-query` package (#77)
* Add Typescript version of Prometheus Provider

* prometheus-provider-ts => fiberplane-prometheus-query

* Update lock file

* Add ability to pass headers

* Add test

* Deduplicate dependencies

* PR feedback

* Export roundToGrid()

--- a/.github/workflows/test_typescript.yml
+++ b/.github/workflows/test_typescript.yml
@@ -5,8 +5,8 @@ on:
     branches: ["**"]
     paths:
       - ".github/workflows/*_typescript.yml"
-      - "fiberplane-charts/**.ts"
-      - "fiberplane-charts/**.tsx"
+      - "fiberplane-charts/**"
+      - "fiberplane-prometheus-query/**"
       - "package.json"
       - "rome.json"
       - "yarn.lock"
@@ -31,6 +31,5 @@ jobs:
       - name: Type-checking
         run: yarn type-check
 
-      # Disabled because there are no TS tests currently.
-      #- name: Run tests
-      #  run: yarn workspaces foreach run test
+      - name: Run tests
+        run: yarn test
