--- a/fiberplane-charts/package.json
+++ b/fiberplane-charts/package.json
@@ -50,6 +50,7 @@
     "scripts": {
         "build": "rollup -c && rollup -c rollup.config.dts.js",
         "lint": "cd .. && yarn lint",
-        "test": "jest"
+        "test": "jest",
+        "type-check": "tsc -p tsconfig.json"
     }
 }
