--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -5,6 +5,7 @@ on:
     branches: ["**"]
     paths-ignore:
       - "fiberplane-charts"
+      - "fiberplane-prometheus-query"
   release:
     types: [published]
 
