--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "license": "MIT OR Apache-2.0",
     "packageManager": "yarn@3.5.0",
     "workspaces": [
-        "fiberplane-charts"
+        "fiberplane-charts",
+        "fiberplane-prometheus-query"
     ],
     "devDependencies": {
         "rome": "^12.1.3",
@@ -14,6 +15,7 @@
     },
     "scripts": {
         "lint": "rome ci .",
-        "type-check": "tsc -p fiberplane-charts/tsconfig.json"
+        "test": "yarn workspaces foreach run test",
+        "type-check": "yarn workspaces foreach run type-check"
     }
 }
