`fiberplane-charts`: Pull out formatters and tooltip content (#79)
* Pull tick formatters and tooltip content from core charts

* Export SeriesSource type

* Update CODEOWNERS

* Allow factory for tick formatters

* Fix typo

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,8 +12,12 @@
 # Templates are owned by the template team
 /fiberplane-templates/ @fiberplane/template-devs
 
-# Charts is owned by the Studio team
+# TypeScript stuff is owned by the Studio team
 /fiberplane-charts/ @fiberplane/studio-devs
+/fiberplane-prometheus-query/ @fiberplane/studio-devs
+package.json
+rome.json
+yarn.lock
 
 # CI stuff is owned by the infrastructure team
 .github @fiberplane/infrastructure-devs
