New crate: `mondrian-charts` (#83)
* WIP: Mondrian in Rust -- it almost compiles

* Even Clippy is happy

* Add snapshot tests for mondrian-charts-rs + use f64 math

* Add unit tests to mondrian-charts-rs

* Rebuild fiberplane-charts

* Use fp-bindgen prelude

* Leave out fp-bindgen for now

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "fiberplane-provider-protocol/fiberplane-provider-bindings",
     "fiberplane-provider-protocol/fiberplane-provider-runtime",
     "fiberplane-templates",
+    "mondrian-charts",
     "xtask",
 ]
 
@@ -36,6 +37,7 @@ fiberplane-openapi-rust-gen = { version = "0.1.0", path = "fiberplane-openapi-ru
 fiberplane-provider-bindings = { version = "2.0.0-beta.4", path = "fiberplane-provider-protocol/fiberplane-provider-bindings" }
 fiberplane-provider-runtime = { version = "2.0.0-beta.4", path = "fiberplane-provider-protocol/fiberplane-provider-runtime" }
 fiberplane-templates = { version = "1.0.0-beta.4", path = "fiberplane-templates" }
+insta = { version = "1.31.0" }
 once_cell = { version = "1.12" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -54,6 +56,12 @@ vergen = { version = "7.4.2", default-features = false, features = [
     "build",
     "git",
 ] }
+
+[profile.dev.package.insta]
+opt-level = 3
+
+[profile.dev.package.similar]
+opt-level = 3
 
 [patch.crates-io]
 #fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "release-3.0.0" }
