Publish `mondrian-charts` and `@fiberplane/fiberplane-charts` (#96)
* Improve Mondrian README

* Update Mondrian and fiberplane-charts docs and packages

* Give fiberplane-prometheus-query the same treatment

* Update lock file

* Fail CI if dist folder is checked in

* PR feedback

* Formatting fix

* Publish packages

--- a/.github/workflows/test_typescript.yml
+++ b/.github/workflows/test_typescript.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: yarn --immutable
 
+      - name: Verify dist/ folders are not checked in
+        run: yarn test-dist
+
       - name: Linting and formatting
         # Skip on main, since it's not critical and should've already been
         # checked before merging
