--- a/fiberplane-prometheus-query/package.json
+++ b/fiberplane-prometheus-query/package.json
@@ -1,15 +1,30 @@
 {
-    "name": "fiberplane-prometheus-query",
+    "name": "@fiberplane/prometheus-query",
+    "version": "0.1.0",
+    "description": "Package for querying Prometheus",
+    "author": "Fiberplane <info@fiberplane.com>",
+    "license": "MIT OR Apache-2.0",
+    "keywords": [
+        "providers",
+        "metrics",
+        "prometheus",
+        "opentelemetry"
+    ],
+    "repository": {
+        "url": "git+https://github.com/fiberplane/fiberplane.git"
+    },
+    "type": "module",
+    "sideEffects": false,
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
-        "dist/"
+        "dist/",
+        "package.json",
+        "README.md"
     ],
-    "sideEffects": false,
-    "repository": "https://github.com/fiberplane/fiberplane",
-    "author": "Fiberplane <info@fiberplane.com>",
-    "license": "MIT OR Apache-2.0",
-    "type": "module",
+    "publishConfig": {
+        "access": "public"
+    },
     "devDependencies": {
         "@swc/core": "^1.3.51",
         "@swc/jest": "^0.2.27",
@@ -24,6 +39,7 @@
         "build": "rollup -c && rollup -c rollup.config.dts.js",
         "lint": "cd .. && yarn lint",
         "test": "jest",
+        "test-dist": "test ! -d dist",
         "type-check": "tsc -p tsconfig.json"
     }
 }
