--- a/mondrian-charts/Cargo.toml
+++ b/mondrian-charts/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "mondrian-charts"
-description = "Abstract chart generator"
+description = "Abstract chart generator and renderer"
 readme = "README.md"
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
+keywords = ["chart", "charts", "metrics", "prometheus", "opentelemetry"]
 repository = { workspace = true }
 rust-version = { workspace = true }
-version = "0.1.0"
+version = "0.2.0"
 
 [features]
 default = ["fiberplane", "image"]
