--- a/fiberplane-api-client/Cargo.toml
+++ b/fiberplane-api-client/Cargo.toml
@@ -34,12 +34,10 @@ description = "Generated API client for Fiberplane API"
 edition = "2021"
 name = "fiberplane-api-client"
 readme = "README.md"
+version = "1.0.0-beta.6"
 
 [package.license]
 workspace = true
 
 [package.repository]
-workspace = true
-
-[package.version]
 workspace = true
