--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -7,7 +7,7 @@ edition = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
 rust-version = { workspace = true }
-version = { workspace = true }
+version = "1.0.0-beta.6"
 
 [lib]
 crate-type = ["lib"]
