--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,7 +1,7 @@
-nodeLinker: pnpm
+compressionLevel: mixed
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
+enableGlobalCache: false
 
-yarnPath: .yarn/releases/yarn-3.5.0.cjs
+nodeLinker: node-modules
+
+yarnPath: .yarn/releases/yarn-4.0.1.cjs
