--- a/fiberplane-charts/package.json
+++ b/fiberplane-charts/package.json
@@ -1,67 +1,68 @@
 {
-    "name": "@fiberplane/fiberplane-charts",
-    "version": "0.2.0",
-    "description": "Charts for visualizing metrics",
-    "author": "Fiberplane <info@fiberplane.com>",
-    "license": "MIT OR Apache-2.0",
-    "keywords": [
-        "chart",
-        "charts",
-        "react",
-        "mondrian",
-        "metrics",
-        "prometheus",
-        "opentelemetry"
-    ],
-    "repository": {
-        "url": "git+https://github.com/fiberplane/fiberplane.git"
-    },
-    "type": "module",
-    "sideEffects": false,
-    "module": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "files": [
-        "dist/",
-        "package.json",
-        "README.md"
-    ],
-    "publishConfig": {
-        "access": "public"
-    },
-    "dependencies": {
-        "framer-motion": "^10.12.4",
-        "react-window": "^1.8.9",
-        "throttle-debounce": "^5.0.0"
-    },
-    "peerDependencies": {
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "styled-components": "^5.3.0"
-    },
-    "devDependencies": {
-        "@svgr/rollup": "^7.0.0",
-        "@swc/core": "^1.3.51",
-        "@swc/jest": "^0.2.26",
-        "@types/jest": "^29.5.0",
-        "@types/react": "^18.0.37",
-        "@types/react-window": "^1.8.5",
-        "@types/styled-components": "^5.1.26",
-        "@types/throttle-debounce": "^5.0.0",
-        "jest": "^29.5.0",
-        "react": "^18.2.0",
-        "react-is": "^18.2.0",
-        "rollup": "^3.20.5",
-        "rollup-plugin-dts": "^5.3.0",
-        "rollup-plugin-swc3": "^0.8.1",
-        "styled-components": "^5.3.10",
-        "typescript": "^5.0.4"
-    },
-    "scripts": {
-        "build": "rollup -c && rollup -c rollup.config.dts.js",
-        "lint": "cd .. && yarn lint",
-        "prepublish": "yarn build",
-        "test": "jest",
-        "test-dist": "test ! -d dist",
-        "type-check": "tsc -p tsconfig.json"
-    }
+  "name": "@fiberplane/charts",
+  "version": "0.2.0",
+  "description": "Charts for visualizing metrics",
+  "author": "Fiberplane <info@fiberplane.com>",
+  "license": "MIT OR Apache-2.0",
+  "keywords": [
+    "chart",
+    "charts",
+    "react",
+    "mondrian",
+    "metrics",
+    "prometheus",
+    "opentelemetry"
+  ],
+  "repository": {
+    "url": "git+https://github.com/fiberplane/fiberplane.git"
+  },
+  "type": "module",
+  "sideEffects": false,
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/",
+    "package.json",
+    "README.md"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "dependencies": {
+    "framer-motion": "^10.12.4",
+    "react-window": "^1.8.9",
+    "throttle-debounce": "^5.0.0"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@svgr/rollup": "^7.0.0",
+    "@swc/core": "^1.3.51",
+    "@swc/jest": "^0.2.26",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.37",
+    "@types/react-window": "^1.8.5",
+    "@types/styled-components": "^5.1.26",
+    "@types/throttle-debounce": "^5.0.0",
+    "jest": "^29.5.0",
+    "react": "^18.2.0",
+    "react-is": "^18.2.0",
+    "rollup": "^3.20.5",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-swc3": "^0.8.1",
+    "styled-components": "^5.3.10",
+    "typescript": "^5.0.4"
+  },
+  "scripts": {
+    "build": "rollup -c && rollup -c rollup.config.dts.js",
+    "lint": "cd .. && yarn lint",
+    "prepublish": "yarn build",
+    "test": "jest",
+    "test-dist": "test ! -d dist",
+    "test-no-watch": "jest --no-watch",
+    "type-check": "tsc -p tsconfig.json"
+  }
 }
