--- a/fiberplane-prometheus-query/package.json
+++ b/fiberplane-prometheus-query/package.json
@@ -1,45 +1,46 @@
 {
-    "name": "@fiberplane/prometheus-query",
-    "version": "0.1.1",
-    "description": "Package for querying Prometheus",
-    "author": "Fiberplane <info@fiberplane.com>",
-    "license": "MIT OR Apache-2.0",
-    "keywords": [
-        "providers",
-        "metrics",
-        "prometheus",
-        "opentelemetry"
-    ],
-    "repository": {
-        "url": "git+https://github.com/fiberplane/fiberplane.git"
-    },
-    "type": "module",
-    "sideEffects": false,
-    "module": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "files": [
-        "dist/",
-        "package.json",
-        "README.md"
-    ],
-    "publishConfig": {
-        "access": "public"
-    },
-    "devDependencies": {
-        "@swc/core": "^1.3.51",
-        "@swc/jest": "^0.2.27",
-        "@types/jest": "^29.5.3",
-        "jest": "^29.6.1",
-        "rollup": "^3.20.5",
-        "rollup-plugin-dts": "^5.3.0",
-        "rollup-plugin-swc3": "^0.8.1",
-        "typescript": "^5.0.4"
-    },
-    "scripts": {
-        "build": "rollup -c && rollup -c rollup.config.dts.js",
-        "lint": "cd .. && yarn lint",
-        "test": "jest",
-        "test-dist": "test ! -d dist",
-        "type-check": "tsc -p tsconfig.json"
-    }
+  "name": "@fiberplane/prometheus-query",
+  "version": "0.1.1",
+  "description": "Package for querying Prometheus",
+  "author": "Fiberplane <info@fiberplane.com>",
+  "license": "MIT OR Apache-2.0",
+  "keywords": [
+    "providers",
+    "metrics",
+    "prometheus",
+    "opentelemetry"
+  ],
+  "repository": {
+    "url": "git+https://github.com/fiberplane/fiberplane.git"
+  },
+  "type": "module",
+  "sideEffects": false,
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/",
+    "package.json",
+    "README.md"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.3.51",
+    "@swc/jest": "^0.2.27",
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.1",
+    "rollup": "^3.20.5",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-swc3": "^0.8.1",
+    "typescript": "^5.0.4"
+  },
+  "scripts": {
+    "build": "rollup -c && rollup -c rollup.config.dts.js",
+    "lint": "cd .. && yarn lint",
+    "test": "jest",
+    "test-dist": "test ! -d dist",
+    "test-no-watch": "jest --no-watch",
+    "type-check": "tsc -p tsconfig.json"
+  }
 }
