--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "packageManager": "yarn@3.5.0",
   "workspaces": [
     "fiberplane-charts",
-    "fiberplane-prometheus-query"
+    "fiberplane-prometheus-query",
+    "fiberplane-ui"
   ],
   "devDependencies": {
     "@biomejs/biome": "1.1.2",
