TypeScript magic strikes again (#118)
* TypeScript magic strikes again

* Fix it

* Update CODEOWNERS and workflow triggers to include fiberplane-ui

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -15,6 +15,7 @@
 # TypeScript stuff is owned by the Studio team
 /fiberplane-charts/ @fiberplane/studio-devs
 /fiberplane-prometheus-query/ @fiberplane/studio-devs
+/fiberplane-ui/ @fiberplane/studio-devs
 biome.json
 package.json
 yarn.lock
