--- a/.github/workflows/build_rust.yml
+++ b/.github/workflows/build_rust.yml
@@ -6,6 +6,7 @@ on:
     paths-ignore:
       - "fiberplane-charts"
       - "fiberplane-prometheus-query"
+      - "fiberplane-ui"
   release:
     types: [published]
 
