--- a/.github/workflows/test_typescript.yml
+++ b/.github/workflows/test_typescript.yml
@@ -8,6 +8,7 @@ on:
       - "biome.json"
       - "fiberplane-charts/**"
       - "fiberplane-prometheus-query/**"
+      - "fiberplane-ui/**"
       - "package.json"
 
 jobs:
