--- a/fiberplane-ui/tsconfig.json
+++ b/fiberplane-ui/tsconfig.json
@@ -6,10 +6,13 @@
     "moduleResolution": "Bundler",
     "isolatedModules": true,
     "jsx": "react-jsx",
+    "rootDir": "src",
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
-  }
+    "noUnusedParameters": true,
+    "types": []
+  },
+  "include": ["src/**/*"],
 }
