--- a/biome.json
+++ b/biome.json
@@ -1,18 +1,14 @@
 {
-  "$schema": "node_modules/@biomejs/biome/configuration_schema.json",
+  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
-    "indentSize": 2
+    "indentWidth": 2
   },
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
-      "nursery": {
-        "useExhaustiveDependencies": "error",
-        "useHookAtTopLevel": "error"
-      }
+      "recommended": true
     }
   },
   "files": {
