Add Autometrics query generation to prometheus-query (#121)
* Add Autometrics query generation to prometheus-query

* Merge latest query

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "build": "yarn workspaces foreach -Wpt --verbose run build",
+    "format": "biome format --write .",
     "lint": "biome ci .",
     "test": "yarn workspaces foreach -W run test",
     "test-dist": "yarn workspaces foreach -W run test-dist",
