--- a/fiberplane-prometheus-query/package.json
+++ b/fiberplane-prometheus-query/package.json
@@ -26,7 +26,8 @@
     "access": "public"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.51",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@swc/core": "^1.3.95",
     "@swc/jest": "^0.2.27",
     "@types/jest": "^29.5.3",
     "jest": "^29.6.1",
@@ -36,7 +37,7 @@
     "typescript": "^5.0.4"
   },
   "scripts": {
-    "build": "rollup -c && rollup -c rollup.config.dts.js",
+    "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "lint": "cd .. && yarn lint",
     "test": "jest",
     "test-dist": "test ! -d dist",
