Streamline development process for @fiberplane/{ui,charts,prometheus-query} (#124)
* Add watch scripts

* Add watch command

* Use interlaced output

--- a/fiberplane-prometheus-query/package.json
+++ b/fiberplane-prometheus-query/package.json
@@ -38,6 +38,7 @@
   },
   "scripts": {
     "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "watch": "yarn run build --watch",
     "lint": "cd .. && yarn lint",
     "test": "jest",
     "test-dist": "test ! -d dist",
