--- a/fiberplane-charts/package.json
+++ b/fiberplane-charts/package.json
@@ -57,7 +57,8 @@
     "typescript": "^5.0.4"
   },
   "scripts": {
-    "build": "rollup -c && rollup -c rollup.config.dts.js",
+    "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "watch": "yarn build --watch",
     "lint": "cd .. && yarn lint",
     "prepublish": "yarn build",
     "test": "jest",
