--- a/fiberplane-ui/package.json
+++ b/fiberplane-ui/package.json
@@ -40,6 +40,7 @@
   },
   "scripts": {
     "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "watch": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript --watch",
     "prepublishOnly": "yarn build",
     "type-check": "tsc -p tsconfig.json"
   },
