--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "build": "yarn workspaces foreach -Wpt --verbose run build",
+    "watch": "yarn workspaces foreach -Wipt --verbose run watch",
     "format": "biome format --write .",
     "lint": "biome ci .",
     "test": "yarn workspaces foreach -W run test",
