Rename Yarn worktree (#140)
* Rename worktree

* Cleanup Rollup output when building @fiberplane/ui

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fiberplane",
+  "name": "fiberplane-yarn-worktree",
   "description": "Fiberplane Yarn worktree",
   "repository": "https://github.com/fiberplane/fiberplane",
   "author": "Fiberplane <info@fiberplane.com>",
