Add Front Matter Schema models to workspaces, and notebooks (#126)
- `fiberplane-models`: Add models and operations to interact with Front matter using 
  "Front Matter Schema" structure.
  Each notebook has both a "front matter" (the raw data) and a "front matter schema",
  controlling the display and the properties of the front matter.
  Each workspace has a list of (editable) associated front matter schemas pickable when
  creating notebooks.
- `fiberplane-api-client`: Add queries to work with front matter schemas associated with
  a workspace.

Fixes: AM-168

Fixes: AM-163
---------

Co-authored-by: Jacco Flenter <flenter@users.noreply.github.com>

--- a/fiberplane-api-client/Cargo.toml
+++ b/fiberplane-api-client/Cargo.toml
@@ -30,14 +30,18 @@ path = "src/lib.rs"
 required-features = []
 
 [package]
+authors = ["Fiberplane <info@fiberplane.com>"]
 description = "Generated API client for Fiberplane API"
 edition = "2021"
 name = "fiberplane-api-client"
 readme = "README.md"
-version = "1.0.0-beta.7"
+rust-version = "1.64"
 
 [package.license]
 workspace = true
 
 [package.repository]
+workspace = true
+
+[package.version]
 workspace = true
