--- a/fiberplane-models/Cargo.toml
+++ b/fiberplane-models/Cargo.toml
@@ -47,6 +47,7 @@ typed-builder = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 strum = "0.24"
 strum_macros = "0.24"
+ordered-float = { version = "4.1.1", features = ["serde"] }
 
 [dev-dependencies]
 pretty_assertions = "1.3"
