update to sqlx 0.7 (#157)

--- a/fiberplane-models/Cargo.toml
+++ b/fiberplane-models/Cargo.toml
@@ -35,12 +35,7 @@ rmp-serde = "1.0"
 serde = { workspace = true }
 serde_bytes = "0.11"
 serde_json = { workspace = true }
-# Currently, sqlx does not export the macros without picking a runtime
-# `runtime-tokio-rustls` can be removed once https://github.com/launchbadge/sqlx/issues/1627 is resolved
-sqlx = { version = "0.6", default-features = false, optional = true, features = [
-    "macros",
-    "runtime-tokio-rustls",
-] }
+sqlx = { version = "0.7.3", default-features = false, optional = true, features = ["macros"] }
 thiserror = "1.0"
 time = { workspace = true }
 typed-builder = { workspace = true }
