--- a/base64uuid/Cargo.toml
+++ b/base64uuid/Cargo.toml
@@ -17,12 +17,7 @@ creation = ["uuid/v4"]
 base64 = "0.13.0"
 fp-bindgen = { workspace = true, optional = true }
 serde = { workspace = true }
-# Currently, sqlx does not export the macros without picking a runtime
-# `runtime-tokio-rustls` can be removed once https://github.com/launchbadge/sqlx/issues/1627 is resolved
-sqlx = { version = "0.6", default-features = false, optional = true, features = [
-    "macros",
-    "runtime-tokio-rustls",
-] }
+sqlx = { version = "0.7.3", default-features = false, optional = true, features = ["macros"] }
 thiserror = { workspace = true }
 uuid = { workspace = true }
 
