Add new documentation site (#154)
* add initial documentation site

* add content from old docs site

* add alias for asset

* remove yarnrc

* replace asset links

* ignore direnv

* move gif to assets

* remove redundant category and slug properties

* update gitignore

* rename according to kebab case

* move relevant pages under the folders

* rm line

* update formatting

* move guides to a docs/guides/ subpage

* make astro config ts

* add biome

* add alias

* initial API reference coms

* add Fiberplane Logo

* update renames, add reference pages, update index

* more renames and remove docs from yarn workspace for now

* point starlight to a branch commit for now

* replace the api page with new components

* add prettier because Biome doesn't support Astro yet

* point starlight back to released

Virtual Pages support for Astro Starlight has been released in 0.19.0

* update formatting for astro and ts files according to fp style

* add format script to package json

* move assets to images folder

* add fp colors

* fix asset urls

* latest

* utils and logo confdig

* remove redundant comp

* show params for all content formats

* add example comps

* change slug and move path visual to the top

* change slug

* modify sidebar for api references

* add httsnippet

* add response schema showcase

* replace parser with a properly typed one

* formatting

* begin modifying comps based on new parser

* sample openapi change with tags at root level

* swap parser and fix up some types

* update template api

* formatting updates

* make the operation component responsive

* remove redundant classes

* remove redundant slugger and add a guard for operations

* add clearer variable names

* refactor base parameter component into a reusable piece

* make api reference index page a bit more fancy

* remove unused card

* add docs publishing workflows



--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,11 @@
 root = true
 
 [*]
-charset = utf-8
 end_of_line = lf
-indent_size = 4
-indent_style = space
 insert_final_newline = true
+charset = utf-8
 
-[*.yml]
+[*.{json,js,ts}]
+indent_style = space
 indent_size = 2
+
