PagerDuty webhooks integration (#175)
* Add PagerDuty webhooks integration

* Include name in the pagerduty receiver create endpoint

* Add sorting to pagerduty_receiver_list

* Update fiberplane-openapi-rust-gen/src/client_config.rs

Co-authored-by: Mari <git@cutegirl.tech>

* Move to the correct rust_module

* Fix module reference

* Resolve clippies

* Update deprecated message for both crates

* Return errors and mention OperationID

* Remove to_sql function

* Make axum support explicit on a version

Currently only supported is 0.6

---------

Co-authored-by: Mari <git@cutegirl.tech>

--- a/fiberplane-models/Cargo.toml
+++ b/fiberplane-models/Cargo.toml
@@ -17,6 +17,7 @@ clap = ["dep:clap"]
 fp-bindgen = ["base64uuid/fp-bindgen", "dep:fp-bindgen"]
 
 [dependencies]
+axum_06 = { package = "axum", version = "0.6", optional = true }
 base64 = "0.13"
 base64uuid = { workspace = true, default-features = false }
 bytes = { workspace = true }
