--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,8 @@
       "node_modules/**",
       "target/**",
       "**/providerTypes.ts",
-      "**/*.json"
+      "**/*.json",
+      "**/*.astro"
     ]
   }
 }
