--- a/fiberplane-charts/tsconfig.json
+++ b/fiberplane-charts/tsconfig.json
@@ -12,7 +12,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "types": ["jest"]
+    "types": ["jest"],
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
 }
