Fix docs publishing workflow (#184)
* rename file and add secrets

* add secrets correctly to the publishing workflow

* replace secret with env for the s3 id

* revert rename (so i can run against the branch)

* maybe vars?

* set correct permissions for the job

* yarn lock shouldn't be ignored

* cleanup the s3 command

* add cloudfront id to the workflow

* edit and add proper readme for the repo

* add workflow for validating the oapi schema

* rm deno.jsonc

* replace secrets with simple inputs

* attempt again for workflows

* properly set secrets

* fix the openapi validation workflow

--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -2,11 +2,25 @@ name: Build and publish docs website
 
 on:
   workflow_call:
-    
+    secrets:
+      AWS_ROLE_GITHUB_ACTIONS:
+        required: true
+    inputs:
+      docs_bucket_id:
+        description: The S3 bucket id where the built docs should be placed
+        type: string
+        required: true
+      docs_cloudfront_id:
+        description: The CloudFront instance that should be invalidated
+        type: string
+        required: true
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     defaults:
       run:
         working-directory: ./docs
@@ -28,15 +42,11 @@ jobs:
 
       - name: Sync to S3 bucket
         run: |
-          aws s3 sync \
-            --sse AES256 \
-            --delete
-            ./dist/ \
-            s3://${{ secrets.DOCS_BUCKET_ID }}
+          aws s3 sync --delete ./dist/ s3://${{ inputs.docs_bucket_id }}
 
-      # - name: Invalidate CloudFront
-      #   run: |
-      #     aws cloudfront create-invalidation \
-      #     --distribution-id "AAAAAAAA" \ #FIXME: check this id
-      #       --paths '/*'
+      - name: Invalidate CloudFront
+        run: |
+          aws cloudfront create-invalidation \
+          --distribution-id ${{ inputs.docs_cloudfront_id }} \
+            --paths '/*'
 
