--- a/.github/workflows/validate_openapi.yml
+++ b/.github/workflows/validate_openapi.yml
@@ -10,9 +10,10 @@ jobs:
   validate_schema:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
       - shell: bash
-        run: deno run --allow-read scripts/validate_openapi.ts
+        run: deno run --allow-read --allow-env scripts/validate_openapi.ts
 
