Add support for axum 0.7 (#188)
* Add support for axum 0.7

Update required version of octocrab

* Fix issues with compilation of axum_06 feature

Make specific fn private, as they expose other types depending on the features that are enabled

* Update to reqwest 0.12

--- a/fiberplane-models/Cargo.toml
+++ b/fiberplane-models/Cargo.toml
@@ -13,11 +13,14 @@ version = "1.0.0-beta.13"
 crate-type = ["lib"]
 
 [features]
+axum_06 = ["dep:axum_06", "dep:http_02"]
+axum_07 = ["dep:axum_07", "dep:http_1"]
 clap = ["dep:clap"]
 fp-bindgen = ["base64uuid/fp-bindgen", "dep:fp-bindgen"]
 
 [dependencies]
 axum_06 = { package = "axum", version = "0.6", optional = true }
+axum_07 = { package = "axum", version = "0.7", optional = true }
 base64 = "0.13"
 base64uuid = { workspace = true, default-features = false }
 bytes = { workspace = true }
@@ -31,6 +34,8 @@ fp-bindgen = { workspace = true, optional = true, features = [
     "serde-json-compat",
     "time-compat",
 ] }
+http_1 = { package = "http", version = "1", optional = true }
+http_02 = { package = "http", version = "0.2", optional = true }
 rmpv = "1"
 rmp-serde = "1.0"
 serde = { workspace = true }
