--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["lib"]
 [features]
 api-client = ["fiberplane-api-client"]
 axum_06 = ["fiberplane-models?/axum_06"]
+axum_07 = ["fiberplane-models?/axum_07"]
 base64uuid-creation = ["base64uuid/creation"]
 clap = ["fiberplane-models?/clap"]
 fp-bindgen = ["base64uuid?/fp-bindgen", "fiberplane-models?/fp-bindgen"]
