Documentation content updates (#200)
* move front matter guide to the site

* dep upgrades

* new quickstart

* rename asset

* rename shell guide

* set up correct index pages

* simplify provider guides

* move provide protocol reference

* set up the correct provider protocol guides

* annotations

* quickstart updates

* add faq page

* snippets

* sidebar updates and add pagefind to include reference

* update urls to remove whitespace

* providers index page

* simplify config

* don't index api reference page (not ideal for consumption)

* remove old pagerduty guide pending updates

* set up correct webhook guides

* template guide updates

* sidebar

* format the jsonnet correctly

* add mermaid deps

* render mermaid diagrams inside of code blocks

* remove template

* update index page

* move the internal documentation where it belongs

* remove Development sidebar

* generate templates reference automatically from the libsonnet in the docs site itself

* remove in-source documentation

* formatting

* a few more renames and simplification

* update yarn lock

--- a/docs/package.json
+++ b/docs/package.json
@@ -13,21 +13,27 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.5.3",
+    "@types/jsdoc-to-markdown": "^7.0.6",
     "openapi-types": "^12.1.3",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@astrojs/check": "0.5.3",
-    "@astrojs/starlight": "^0.19.0",
-    "@astrojs/vue": "^4.0.8",
+    "@astrojs/check": "0.5.10",
+    "@astrojs/markdown-remark": "^5.0.0",
+    "@astrojs/starlight": "0.21.2",
+    "@astrojs/vue": "4.0.9",
     "@astropub/md": "^0.4.0",
     "@readme/httpsnippet": "^8.1.4",
     "@readme/openapi-parser": "^2.5.0",
     "@scalar/api-reference": "^1.13.9",
     "@scalar/swagger-parser": "^0.5.15",
-    "astro": "4.4.0",
-    "sharp": "^0.32.5"
+    "astro": "4.5.10",
+    "astro-pagefind": "^1.5.0",
+    "jsdoc-to-markdown": "^8.0.1",
+    "mermaid": "^10.9.0",
+    "sharp": "^0.33.3",
+    "unist-util-visit": "^5.0.0"
   }
 }
