Fp 3664 upgrade biome (#222)
* Upgrade biome

* Use latest biome

* Add useExhaustiveDependencies config

* Undo changes to the AutoSuggestRequest struct

* Revert changes to provider-protocol

* Remove superfluous biome-ignore

--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,15 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "correctness": {
+        "useExhaustiveDependencies": {
+          "level": "error",
+          "options": {
+            "hooks": [{ "name": "useHandler", "stableResult": 1 }]
+          }
+        }
+      }
     }
   },
   "files": {
